--- a/_pages/research.html
+++ b/_pages/research.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Research</title>
+<title>research</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -348,7 +348,6 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Research</h1>
 
 </div>
 
@@ -368,12 +367,12 @@ Mellace</a>)</li>
 <li>Testing identification in mediation and dynamic treatment models
 (with <a href="http://www.unifr.ch/appecon/en/team/martin-huber/">Martin
 Huber</a> and <a href="https://kevinkloiber.github.io">Kevin
-Kloiber</a>, <a href="https://arxiv.org/abs/2406.13826">arXiv:2406.13826</a>, <a href="https://lukas-laffers.squarespace.com/s/compie.pdf">slides</a>)</li>
+Kloiber</a>, <a href="https://arxiv.org/abs/2406.13826">arXiv:2406.13826</a>, <a href="http://lukaslaffers.github.io/files/compie.pdf">slides</a>)</li>
 <li>Mothers’ Job Search after Childbirth and Earnings (with <a href="https://sites.google.com/site/bernhardecon/">Bernhard
 Schmidpeter</a>, <a href="https://www.dropbox.com/s/0ibbncyd9ldu23t/20220824_Bounds_MaternityReturn.pdf?dl=0">8/2022
 version</a>)</li>
 <li>Locking-in or Pushing-out: The Caseworker Dilemma (with <a href="http://ekonom.sav.sk/sk/pracovnici/miroslav-stefanik">Miroslav
-Štefánik</a>, <a href="https://www.lukaslaffers.com/s/DML_presentation-3.pdf">slides</a>,
+Štefánik</a>, <a href="http://lukaslaffers.github.io/files/DML_presentation-3.pdf">slides</a>,
 <a href="https://ekonom.sav.sk/uploads/journals/438_wp115-stefanik-zmena-na_web.pdf">IER
 WP</a>)</li>
 <li>Afraid of Automation? Choose your Training Carefully (with <a href="https://ekonom.sav.sk/sk/pracovnici/zuzana-kostalova">Zuzana
@@ -442,7 +441,7 @@ Schmidpeter</a>)</li>
 Economics</em></strong>, 2019, 57, (3), 727-767</a>, <a href="https://rdcu.be/S6cw">view-only link</a><em>,</em> based on
 chapter 3 <a href="http://www.lukaslaffers.com/s/Dissertation-Laffers-mk6h.pdf">here</a>,
 previous version <a href="https://www.econstor.eu/bitstream/10419/130074/1/839462700.pdf">Cemmap
-CWP70/15</a>, <a href="https://www.lukaslaffers.com/s/ttr0z3eaif8y3tq4dresfxsl3bhqe4">MATLAB
+CWP70/15</a>, <a href="http://lukaslaffers.github.io/files/ttr0z3eaif8y3tq4dresfxsl3bhqe4">MATLAB
 code</a>)</li>
 <li>Identification in Models with Discrete Variables (<a href="https://link.springer.com/article/10.1007/s10614-017-9758-5?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst"><strong><em>Computational
 Economics</em></strong>, 2019, 53, (2), 657-698</a>, <a href="http://rdcu.be/wv2N">view-only link</a>, based on chapter 1 <a href="http://www.lukaslaffers.com/s/Dissertation-Laffers-mk6h.pdf">here</a>,
@@ -501,10 +500,10 @@ those that achieved high significance</a>. 2017—2019)</li>
 <div id="theses" class="section level1">
 <h1>Theses</h1>
 <ul>
-<li><strong>doc.</strong> <a href="https://www.lukaslaffers.com/s/hab_thesis_Laffers_public.pdf"><strong>Essays
+<li><strong>doc.</strong> <a href="http://lukaslaffers.github.io/files/hab_thesis_Laffers_public.pdf"><strong>Essays
 in econometrics of model uncertainty</strong></a> <strong>(2024,
 MUNI)</strong></li>
-<li><strong>PhD.</strong> <a href="https://www.lukaslaffers.com/s/Dissertation-Laffers-mk6h.pdf"><strong>Essays
+<li><strong>PhD.</strong> <a href="http://lukaslaffers.github.io/files/Dissertation-Laffers-mk6h.pdf"><strong>Essays
 in Partial Identification</strong></a> <strong>(2014, NHH)</strong></li>
 <li><strong>Mgr.</strong> <a href="http://www.iam.fmph.uniba.sk/studium/efm/diplomovky/2009/laffers/diplomovka.pdf"><strong>Empirical
 likelihood estimation of interest rate diffusion model</strong></a>
