--- a/_pages/teachings.html
+++ b/_pages/teachings.html
@@ -384,37 +384,44 @@ regresia 2</a></li>
 <div id="instructor" class="section level1">
 <h1>Instructor</h1>
 <ul>
-<li><p>Probability and Statistics 1 (Spring 2022-2025 in Slovak, UMB)
--<a href="https://lukaslaffers.github.io/files/sylabus_ps_1_svk_25.pdf">Sylabus</a>
--<a href="https://lukaslaffers.github.io/pas1/">Učebný text</a>
--Zaujímavé odkazy: <a href="https://seeing-theory.brown.edu/">Vizualizácie Seeing Theory</a>,
-<a href="https://www.stat.berkeley.edu/~stark/Preprints/611.pdf">Aká je
-pravdepodobnosť zemetrasenie?</a>, <a href="https://www.youtube.com/watch?v=HZGCoVF3YvM">Vizualizácia
-Bayesovej vety (3Blue1Brown)</a>, <a href="https://www.youtube.com/watch?v=4Lb-6rxZxx0">Monty Hall
-problem</a>, <a href="https://www.youtube.com/watch?v=zeJD6dqJ5lo">Centrálna limitná
-veta (3Blue1Brown)</a></p></li>
-<li><p>Regression Analysis 1 (Spring 2016-2021, 2023-2024 in Slovak,
-UMB)</p></li>
-<li><p>Stochastic Processes (Fall 2015-2018, 2020-2024, in Slovak,
-UMB)</p></li>
-<li><p>Probability and Statistics 2 (Spring 2022-2024 in Slovak,
-UMB)</p></li>
-<li><p>Optimisation and Microeconomic Theory (Fall 2014, 2018-2024,
-Master, NHH)</p></li>
-<li><p>Econometrics (Fall 2021-2024, PhD course, MUNI)</p></li>
-<li><p>Regression Analysis 2 (Fall 2016-2023 in Slovak, UMB)</p></li>
-<li><p>Probability and Statistics 2 (Fall 2021-2023 in Slovak,
-UMB)</p></li>
-<li><p>Probability Theory 1 (Spring 2014, 2016, 2018-2023, in Slovak,
-UMB)</p></li>
-<li><p>Computation and Simulation in R 3 (Spring 2018-2021, 2023, in
-Slovak, UMB)</p></li>
-<li><p>Introduction to Numerical Methods using MATLAB (Spring 2015 and
-2017, intensive PhD course, NHH)</p></li>
-<li><p>Financial Mathematics 2 (Fall 2015, in Slovak, UMB)</p></li>
-<li><p>Diploma Seminar (Spring 2014, in Slovak, UMB)</p></li>
-<li><p>Refresher Course in Probability and Statistics (Fall 2013,
-intensive PhD course, NHH)</p></li>
+<li>Probability and Statistics 1 (Spring 2022-2025 in Slovak, UMB)
+<ul>
+<li><a href="https://lukaslaffers.github.io/files/sylabus_ps_1_svk_25.pdf">Sylabus</a></li>
+<li><a href="https://lukaslaffers.github.io/pas1/">Učebný text</a></li>
+<li>Zaujímavé odkazy:
+<ul>
+<li><a href="https://seeing-theory.brown.edu/">Vizualizácie Seeing
+Theory</a>,</li>
+<li><a href="https://www.stat.berkeley.edu/~stark/Preprints/611.pdf">Aká
+je pravdepodobnosť zemetrasenie?</a>,</li>
+<li><a href="https://www.youtube.com/watch?v=HZGCoVF3YvM">Vizualizácia
+Bayesovej vety (3Blue1Brown)</a>,</li>
+<li><a href="https://www.youtube.com/watch?v=4Lb-6rxZxx0">Monty Hall
+problem</a>,</li>
+<li><a href="https://www.youtube.com/watch?v=zeJD6dqJ5lo">Centrálna
+limitná veta (3Blue1Brown)</a></li>
+</ul></li>
+</ul></li>
+<li>Regression Analysis 1 (Spring 2016-2021, 2023-2024 in Slovak,
+UMB)</li>
+<li>Stochastic Processes (Fall 2015-2018, 2020-2024, in Slovak,
+UMB)</li>
+<li>Probability and Statistics 2 (Spring 2022-2024 in Slovak, UMB)</li>
+<li>Optimisation and Microeconomic Theory (Fall 2014, 2018-2024, Master,
+NHH)</li>
+<li>Econometrics (Fall 2021-2024, PhD course, MUNI)</li>
+<li>Regression Analysis 2 (Fall 2016-2023 in Slovak, UMB)</li>
+<li>Probability and Statistics 2 (Fall 2021-2023 in Slovak, UMB)</li>
+<li>Probability Theory 1 (Spring 2014, 2016, 2018-2023, in Slovak,
+UMB)</li>
+<li>Computation and Simulation in R 3 (Spring 2018-2021, 2023, in
+Slovak, UMB)</li>
+<li>Introduction to Numerical Methods using MATLAB (Spring 2015 and
+2017, intensive PhD course, NHH)</li>
+<li>Financial Mathematics 2 (Fall 2015, in Slovak, UMB)</li>
+<li>Diploma Seminar (Spring 2014, in Slovak, UMB)</li>
+<li>Refresher Course in Probability and Statistics (Fall 2013, intensive
+PhD course, NHH)</li>
 </ul>
 </div>
 <div id="teaching-assistant" class="section level1">
