--- a/_pages/research.html
+++ b/_pages/research.html
@@ -352,24 +352,15 @@ display: none;
 </div>
 
 
-<div id="work-in-progress" class="section level1">
-<h1>Work in Progress</h1>
-<ul>
-<li>Treatment Effects for Discrete Misreported Outcomes (under
-Endogeneity) (with <a href="https://sites.google.com/view/daniel-gutknecht/home">Daniel
-Gutknecht</a> and <a href="https://sites.google.com/site/giovannimellace/">Giovanni
-Mellace</a>)</li>
-</ul>
-</div>
-<div id="working-papers" class="section level1">
-<h1>Working Papers</h1>
+<div id="working-papers-work-in-progress" class="section level1">
+<h1>Working Papers / Work in Progress</h1>
 <ul>
 <li>Testing identification in mediation and dynamic treatment models
 (with <a href="http://www.unifr.ch/appecon/en/team/martin-huber/">Martin
 Huber</a> and <a href="https://kevinkloiber.github.io">Kevin
 Kloiber</a>, <a href="https://arxiv.org/abs/2406.13826">arXiv:2406.13826</a>, <a href="http://lukaslaffers.github.io/files/compie.pdf">slides</a>)</li>
 <li>Mothers’ Job Search after Childbirth and Earnings (with <a href="https://sites.google.com/site/bernhardecon/">Bernhard
-Schmidpeter</a>, <a href="https://www.dropbox.com/s/0ibbncyd9ldu23t/20220824_Bounds_MaternityReturn.pdf?dl=0">8/2022
+Schmidpeter</a>, <a href="https://www.dropbox.com/s/0ibbncyd9ldu23t/20220824_Bounds_MaternityReturn.pdf?dl=0">WP
 version</a>)</li>
 <li>Locking-in or Pushing-out: The Caseworker Dilemma (with <a href="http://ekonom.sav.sk/sk/pracovnici/miroslav-stefanik">Miroslav
 Štefánik</a>, <a href="http://lukaslaffers.github.io/files/DML_presentation-3.pdf">slides</a>,
@@ -379,6 +370,10 @@ WP</a>)</li>
 Koštálová</a>, <a href="http://ekonom.sav.sk/sk/pracovnici/miroslav-stefanik">Miroslav
 Štefánik</a>, <a href="https://ekonom.sav.sk/uploads/journals/437_wp_116-kostalova-final_fin_na_web.pdf">IER
 WP</a>)</li>
+<li>Treatment Effects for Discrete Misreported Outcomes (under
+Endogeneity) (with <a href="https://sites.google.com/view/daniel-gutknecht/home">Daniel
+Gutknecht</a> and <a href="https://sites.google.com/site/giovannimellace/">Giovanni
+Mellace</a>)</li>
 <li>Identification of the average treatment effect when SUTVA is
 violated (with <a href="https://sites.google.com/site/giovannimellace/">Giovanni
 Mellace</a>, <a href="https://www.sdu.dk/-/media/files/om_sdu/institutter/ivoe/disc_papers/disc_2020/dpbe3_2020.pdf">SDU
