--- a/_pages/presentations.html
+++ b/_pages/presentations.html
@@ -355,30 +355,26 @@ display: none;
 <div id="presentations" class="section level1">
 <h1>Presentations</h1>
 <ul>
-<li>2024: <a href="http://lukaslaffers.github.io/files/Laffers_SEAM_2024.pdf">SEAM
-Bratislava</a>, <a href="http://lukaslaffers.github.io/files/EALE_Laffers.pdf">EALE
-Bergen</a>, <a href="http://lukaslaffers.github.io/files/compie.pdf">COMPIE
-Amsterdam</a>, <a href="http://lukaslaffers.github.io/files/LL_probastat3.pdf">PROBASTAT
+<li>2025: scheduled: {JRC - European Commision (Ispra), VŠE (Prague),
+University of St. Gallen}</li>
+<li>2024: SEAM Bratislava, <a href="http://lukaslaffers.github.io/files/EALE_Laffers.pdf">EALE
+Bergen</a>, COMPIE Amsterdam, <a href="http://lukaslaffers.github.io/files/LL_probastat3.pdf">PROBASTAT
 Smolenice</a>, <a href="http://lukaslaffers.github.io/files/LL_main.pdf">MUNI Brno
 (habilitation lecture)</a></li>
-<li>2023: Meeting of the Institute of Economic Research in Smolenice, <a href="http://lukaslaffers.github.io/files/DML_presentation-3.pdf">Machine
+<li>2023: MIER in Smolenice, <a href="http://lukaslaffers.github.io/files/DML_presentation-3.pdf">Machine
 Learning in program evaluation, high-dimensionality and visualization
-techniques in Luxembourg</a>, Slovak Economic Association Meeting in
-Banská Bystrica, MUNI Brno</li>
-<li>2022: Meeting of the Institute of Economic Research in Smolenice,
-Norwegian School of Economics, Slovak Economic Association Meeting in
-Bratislava, Turku School of Economics (virtual), Charles University in
-Prague, <a href="http://lukaslaffers.github.io/files/DML_robust-copy.pdf">ROBUST
+techniques in Luxembourg</a>, SEAM in Banská Bystrica, MUNI Brno</li>
+<li>2022: Meeting of the Institute of Economic Research (MIER) in
+Smolenice, Norwegian School of Economics, SEAM in Bratislava, Turku
+School of Economics (virtual), Charles University in Prague, <a href="http://lukaslaffers.github.io/files/DML_robust-copy.pdf">ROBUST
 (Czech Statistical Society meeting in Volyne)</a>, Annual Conference of
 the International Association for Applied Econometrics in London</li>
 <li>2021: Czech Economic Society Conference (virtual), COMPIE (virtual),
 Swiss Society of Economics and Statistics Congress (virtual), <a href="http://lukaslaffers.github.io/files/DML_selection_LL.pdf">NHH -
-Norwegian School of Economics</a>, Slovak Economic Association Meeting
-in Nitra</li>
+Norwegian School of Economics</a>, SEAM in Nitra</li>
 <li>2020: Econometric Society World Congress (virtual), European
-Economic Association Congress (virtual), Slovak Economic Association
-Meeting (virtual), Computational and Methodological Statistics
-Conference (virtual)</li>
+Economic Association Congress (virtual), SEAM (virtual), Computational
+and Methodological Statistics Conference (virtual)</li>
 <li>2019: Slovak Academy of Sciences, Annual Conference of the
 International Association for Applied Econometrics in Nicosia, European
 Economic Association Congress and European Meeting of the Econometric
@@ -386,15 +382,14 @@ Society in Manchester, Czech Economic Society and Slovak Economic
 Association Meeting in Brno</li>
 <li>2018: Royal Economic Society Conference in Brighton, University of
 Fribourg</li>
-<li>2017: Pavol Jozef Safarik University in Kosice, Slovak Economic
-Association meeting in Kosice</li>
+<li>2017: Pavol Jozef Safarik University in Kosice, SEAM in Košice</li>
 <li>2016: Toulouse School of Economics, Joint Annual Meeting of the
 Slovak Economic Association and the Austrian Economic Association in
 Bratislava, Annual Conference of the International Association for
 Applied Econometrics in Milan</li>
 <li>2015: Comenius University in Bratislava (optimisation seminar),
 Comenius University in Bratislava (statistical seminar), Matej Bel
-University, Slovak Economic Association meeting in Kosice, Royal
+University, Slovak Economic Association meeting (SEAM) in Košice, Royal
 Economic Society Conference in Manchester, Paris School of Economics
 (job talk), University of Gothenburg (job talk)</li>
 <li>2014: Matej Bel University, Matej Bel University, NHH - Norwegian
