--- a/_pages/teach.html
+++ b/_pages/teach.html
@@ -381,9 +381,10 @@ regresia 2</a></li>
 <ul>
 <li>Probability and Statistics 1 (Spring 2022-2025 in Slovak, UMB)
 <ul>
+<li>prvý zápočet bude <strong>31.3.2025 o 17:30 v F225</strong></li>
 <li><a href="https://lukaslaffers.github.io/files/sylabus_ps_1_svk_25.pdf">Sylabus</a></li>
 <li>Učebný text <a href="https://lukaslaffers.github.io/pas1/">web</a>,
-<a href="http://lukaslaffers.github.io/files/PaS1bookdown_13022025.pdf">pdf</a></li>
+<a href="http://lukaslaffers.github.io/files/PAS1q_05032025.pdf">pdf</a></li>
 <li>Zaujímavé odkazy:
 <ul>
 <li><a href="https://seeing-theory.brown.edu/">Vizualizácie (Seeing
