--- a/_pages/research.html
+++ b/_pages/research.html
@@ -361,7 +361,7 @@ Huber</a> and <a href="https://kevinkloiber.github.io">Kevin
 Kloiber</a>, <a href="https://arxiv.org/abs/2406.13826">arXiv:2406.13826</a>, <a href="http://lukaslaffers.github.io/files/compie.pdf">slides</a>)</li>
 <li>Mothers’ Job Search after Childbirth and Earnings (with <a href="https://sites.google.com/site/bernhardecon/">Bernhard
 Schmidpeter</a>, <a href="https://www.dropbox.com/s/0ibbncyd9ldu23t/20220824_Bounds_MaternityReturn.pdf?dl=0">WP
-version</a>)</li>
+version</a>), <a href="http://lukaslaffers.github.io/files/mothers_presentation.pdf">slides</a></li>
 <li>Locking-in or Pushing-out: The Caseworker Dilemma (with <a href="http://ekonom.sav.sk/sk/pracovnici/miroslav-stefanik">Miroslav
 Štefánik</a>, <a href="http://lukaslaffers.github.io/files/DML_presentation-3.pdf">slides</a>,
 <a href="https://ekonom.sav.sk/uploads/journals/438_wp115-stefanik-zmena-na_web.pdf">IER
@@ -434,12 +434,12 @@ with <a href="https://sites.google.com/site/bernhardecon/">Bernhard
 Schmidpeter</a>)</li>
 <li>Bounding Average Treatment Effects using Linear Programming (<a href="https://link.springer.com/article/10.1007%2Fs00181-018-1474-z"><strong><em>Empirical
 Economics</em></strong>, 2019, 57, (3), 727-767</a>, <a href="https://rdcu.be/S6cw">view-only link</a><em>,</em> based on
-chapter 3 <a href="http://www.lukaslaffers.com/s/Dissertation-Laffers-mk6h.pdf">here</a>,
+chapter 3 <a href="http://lukaslaffers.github.io/files/Dissertation-Laffers-mk6h.pdf">here</a>,
 previous version <a href="https://www.econstor.eu/bitstream/10419/130074/1/839462700.pdf">Cemmap
 CWP70/15</a>, <a href="http://lukaslaffers.github.io/files/ttr0z3eaif8y3tq4dresfxsl3bhqe4">MATLAB
 code</a>)</li>
 <li>Identification in Models with Discrete Variables (<a href="https://link.springer.com/article/10.1007/s10614-017-9758-5?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst"><strong><em>Computational
-Economics</em></strong>, 2019, 53, (2), 657-698</a>, <a href="http://rdcu.be/wv2N">view-only link</a>, based on chapter 1 <a href="http://www.lukaslaffers.com/s/Dissertation-Laffers-mk6h.pdf">here</a>,
+Economics</em></strong>, 2019, 53, (2), 657-698</a>, <a href="http://rdcu.be/wv2N">view-only link</a>, based on chapter 1 <a href="http://lukaslaffers.github.io/files/Dissertation-Laffers-mk6h.pdf">here</a>,
 previous version <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2205827">NHH
 discussion paper 01/2013</a>)</li>
 <li>Sharp IV Bounds on Average Treatment Effects on the Treated and
@@ -451,7 +451,7 @@ Mellace</a>, <a href="https://www.alexandria.unisg.ch/export/DL/239581.pdf">appe
 code</a>, “Economicus” prize awarded (VÚB foundation))</li>
 <li>Sensitivity of the Bounds on the ATE in the Presence of Sample
 Selection (<a href="http://www.sciencedirect.com/science/article/pii/S0165176517302665"><strong><em>Economics
-Letters</em></strong>, 2017, 158, 84-87</a>, with Roman Nedela, <a href="http://www.lukaslaffers.com/s/supplementary_files.zip">MATLAB
+Letters</em></strong>, 2017, 158, 84-87</a>, with Roman Nedela, <a href="http://lukaslaffers.github.io/files/supplementary_files.zip">MATLAB
 code</a>)</li>
 <li>A Note on Testing Instrument Validity for the Identification of LATE
 (<a href="https://link.springer.com/article/10.1007/s00181-016-1148-7"><strong><em>Empirical
@@ -459,7 +459,8 @@ Economics</em></strong>, 2017, 53, (3), 1281–1286</a>, with <a href="https://s
 Mellace</a>, <a href="http://rdcu.be/vbfY">view-only link</a>, WP
 version: <a href="http://www.sdu.dk/~/media/Files/Om_SDU/Institutter/Ivoe/Disc_papers/Disc_2015/dpbe4_2015.pdf">pdf</a>)</li>
 <li>A Note on Bounding Average Treatment Effects (<a href="http://dx.doi.org/10.1016/j.econlet.2013.05.029"><strong><em>Economics
-Letters</em></strong>, 2013, 120, (3), 424-428</a>, <a href="http://www.lukaslaffers.com/s/Bounds.zip">MATLAB code</a>)</li>
+Letters</em></strong>, 2013, 120, (3), 424-428</a>, <a href="http://lukaslaffers.github.io/files/Bounds.zip">MATLAB
+code</a>)</li>
 </ul>
 </div>
 <div id="research-interests" class="section level1">
@@ -495,14 +496,13 @@ those that achieved high significance</a>. 2017—2019)</li>
 <div id="theses" class="section level1">
 <h1>Theses</h1>
 <ul>
-<li><strong>doc.</strong> <a href="http://lukaslaffers.github.io/files/hab_thesis_Laffers_public.pdf"><strong>Essays
-in econometrics of model uncertainty</strong></a> <strong>(2024,
-MUNI)</strong></li>
-<li><strong>PhD.</strong> <a href="http://lukaslaffers.github.io/files/Dissertation-Laffers-mk6h.pdf"><strong>Essays
-in Partial Identification</strong></a> <strong>(2014, NHH)</strong></li>
-<li><strong>Mgr.</strong> <a href="http://www.iam.fmph.uniba.sk/studium/efm/diplomovky/2009/laffers/diplomovka.pdf"><strong>Empirical
-likelihood estimation of interest rate diffusion model</strong></a>
-<strong>(2009, UK)</strong></li>
+<li><strong>doc.</strong> <a href="http://lukaslaffers.github.io/files/hab_thesis_Laffers_public.pdf">Essays
+in econometrics of model uncertainty</a> (2024, MUNI)</li>
+<li><strong>PhD.</strong> <a href="http://lukaslaffers.github.io/files/Dissertation-Laffers-mk6h.pdf">Essays
+in Partial Identification</a> (2014, NHH)</li>
+<li><strong>Mgr.</strong> <a href="http://www.iam.fmph.uniba.sk/studium/efm/diplomovky/2009/laffers/diplomovka.pdf">Empirical
+likelihood estimation of interest rate diffusion model</a> (2009,
+UK)</li>
 </ul>
 </div>
 <div id="refereeing" class="section level1">
