--- a/_pages/research.html
+++ b/_pages/research.html
@@ -358,10 +358,10 @@ display: none;
 <li>Testing identification in mediation and dynamic treatment models
 (with <a href="http://www.unifr.ch/appecon/en/team/martin-huber/">Martin
 Huber</a> and <a href="https://kevinkloiber.github.io">Kevin
-Kloiber</a>, <a href="https://arxiv.org/abs/2406.13826">arXiv:2406.13826</a>, <a href="http://lukaslaffers.github.io/files/compie.pdf">slides</a>)</li>
+Kloiber</a>, <a href="https://arxiv.org/abs/2406.13826">arXiv:2406.13826</a>, <a href="http://lukaslaffers.github.io/files/presentation_LL_VSE.pdf">slides</a>)</li>
 <li>Mothers’ Job Search after Childbirth and Earnings (with <a href="https://sites.google.com/site/bernhardecon/">Bernhard
 Schmidpeter</a>, <a href="https://www.dropbox.com/s/0ibbncyd9ldu23t/20220824_Bounds_MaternityReturn.pdf?dl=0">WP
-version</a>), <a href="http://lukaslaffers.github.io/files/mothers_presentation.pdf">slides</a></li>
+version</a>, <a href="http://lukaslaffers.github.io/files/mothers_presentation.pdf">slides</a>)</li>
 <li>Locking-in or Pushing-out: The Caseworker Dilemma (with <a href="http://ekonom.sav.sk/sk/pracovnici/miroslav-stefanik">Miroslav
 Štefánik</a>, <a href="http://lukaslaffers.github.io/files/DML_presentation-3.pdf">slides</a>,
 <a href="https://ekonom.sav.sk/uploads/journals/438_wp115-stefanik-zmena-na_web.pdf">IER
@@ -370,6 +370,13 @@ WP</a>)</li>
 Koštálová</a>, <a href="http://ekonom.sav.sk/sk/pracovnici/miroslav-stefanik">Miroslav
 Štefánik</a>, <a href="https://ekonom.sav.sk/uploads/journals/437_wp_116-kostalova-final_fin_na_web.pdf">IER
 WP</a>)</li>
+<li>Causal Mechanisms of Relative Age Effects on Adolescent Risky
+Behaviours (with <a href="https://sites.google.com/site/lucafumarco/home">Luca Fumarco</a>
+and <a href="https://sites.google.com/view/principefrancesco/">Francesco
+Principe</a>)</li>
+<li>Correcting for Nonignorable Nonresponse Bias in Ordinal
+Observational Survey Data (with <a href="https://jozefmichalmintal.com">Jozef Michal Mintal</a> and Ivan
+Sutoris)</li>
 <li>Treatment Effects for Discrete Misreported Outcomes (under
 Endogeneity) (with <a href="https://sites.google.com/view/daniel-gutknecht/home">Daniel
 Gutknecht</a> and <a href="https://sites.google.com/site/giovannimellace/">Giovanni
@@ -383,6 +390,9 @@ discussion paper 3/2020</a>)</li>
 <div id="publications" class="section level1">
 <h1>Publications</h1>
 <ul>
+<li>Sensitivity of Bounds on ATEs under Survey Non-response (with Roman
+Nedela, <a href="https://www.sciencedirect.com/science/article/abs/pii/S2452306222000053"><strong><em>Econometrics
+and Statistics</em></strong>, 2025, 34</a>, 1-13)</li>
 <li>Choosing the right workplace experience - A dynamic evaluation of
 three activation programmes for young job seekers in Slovakia (with <a href="http://ekonom.sav.sk/sk/pracovnici/miroslav-stefanik">Miroslav
 Štefánik</a>, <a href="https://link.springer.com/article/10.1186/s12651-024-00374-x"><strong><em>Journal
@@ -420,9 +430,6 @@ Editor’s choice article</em></a><em>,</em> presentations: <a href="https://www
 <a href="https://youtu.be/__P5DP0WQpo?list=PL-MRd_-k_6x1dYwWftAAxg-f4B3jbmfbT&amp;t=3701">ESWC
 2020</a> by MH, implemented in R - <a href="https://cran.r-project.org/web/packages/causalweight/index.html">causalweight</a>
 package)</li>
-<li>Sensitivity of Bounds on ATEs under Survey Non-response (forthcoming
-in <a href="https://www.sciencedirect.com/science/article/abs/pii/S2452306222000053"><strong><em>Econometrics
-and Statistics</em></strong></a>, with Roman Nedela)</li>
 <li>The Impact of Repeated Mass Antigen Testing for COVID-19 on the
 Prevalence of the Disease (<a href="https://link.springer.com/article/10.1007/s00148-021-00856-z"><strong><em>Journal
 of Population Economics</em></strong>, 2021, 34, 1105—1040</a>, with <a href="https://people.ceu.edu/martin_kahanec">Martin Kahanec</a> and <a href="https://sites.google.com/site/bernhardecon/">Bernhard
@@ -434,12 +441,12 @@ with <a href="https://sites.google.com/site/bernhardecon/">Bernhard
 Schmidpeter</a>)</li>
 <li>Bounding Average Treatment Effects using Linear Programming (<a href="https://link.springer.com/article/10.1007%2Fs00181-018-1474-z"><strong><em>Empirical
 Economics</em></strong>, 2019, 57, (3), 727-767</a>, <a href="https://rdcu.be/S6cw">view-only link</a><em>,</em> based on
-chapter 3 <a href="http://lukaslaffers.github.io/files/Dissertation-Laffers-mk6h.pdf">here</a>,
+chapter 3 <a href="http://lukaslaffers.github.io/files/Dissertation+Laffers.pdf">here</a>,
 previous version <a href="https://www.econstor.eu/bitstream/10419/130074/1/839462700.pdf">Cemmap
 CWP70/15</a>, <a href="http://lukaslaffers.github.io/files/ttr0z3eaif8y3tq4dresfxsl3bhqe4">MATLAB
 code</a>)</li>
 <li>Identification in Models with Discrete Variables (<a href="https://link.springer.com/article/10.1007/s10614-017-9758-5?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst"><strong><em>Computational
-Economics</em></strong>, 2019, 53, (2), 657-698</a>, <a href="http://rdcu.be/wv2N">view-only link</a>, based on chapter 1 <a href="http://lukaslaffers.github.io/files/Dissertation-Laffers-mk6h.pdf">here</a>,
+Economics</em></strong>, 2019, 53, (2), 657-698</a>, <a href="http://rdcu.be/wv2N">view-only link</a>, based on chapter 1 <a href="http://lukaslaffers.github.io/files/Dissertation+Laffers.pdf">here</a>,
 previous version <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2205827">NHH
 discussion paper 01/2013</a>)</li>
 <li>Sharp IV Bounds on Average Treatment Effects on the Treated and
@@ -498,7 +505,7 @@ those that achieved high significance</a>. 2017—2019)</li>
 <ul>
 <li><strong>doc.</strong> <a href="http://lukaslaffers.github.io/files/hab_thesis_Laffers_public.pdf">Essays
 in econometrics of model uncertainty</a> (2024, MUNI)</li>
-<li><strong>PhD.</strong> <a href="http://lukaslaffers.github.io/files/Dissertation-Laffers-mk6h.pdf">Essays
+<li><strong>PhD.</strong> <a href="http://lukaslaffers.github.io/files/Dissertation+Laffers.pdf">Essays
 in Partial Identification</a> (2014, NHH)</li>
 <li><strong>Mgr.</strong> <a href="http://www.iam.fmph.uniba.sk/studium/efm/diplomovky/2009/laffers/diplomovka.pdf">Empirical
 likelihood estimation of interest rate diffusion model</a> (2009,
