--- a/_pages/research.html
+++ b/_pages/research.html
@@ -358,14 +358,18 @@ display: none;
 <li>Testing identification in mediation and dynamic treatment models
 (with <a href="http://www.unifr.ch/appecon/en/team/martin-huber/">Martin
 Huber</a> and <a href="https://kevinkloiber.github.io">Kevin
-Kloiber</a>, <a href="https://arxiv.org/abs/2406.13826">arXiv:2406.13826</a>, <a href="http://lukaslaffers.github.io/files/presentation_LL_VSE.pdf">slides</a>)</li>
+Kloiber</a>, <a href="https://arxiv.org/abs/2406.13826">arXiv:2406.13826</a>, <a href="http://lukaslaffers.github.io/files/presentation_LL_VSE.pdf">slides</a>),
+implemented in
+<ul>
+<li>R - <a href="https://cran.r-project.org/web/packages/causalweight/index.html"><code>testmedident</code>
+in causalweight</a> package.</li>
+</ul></li>
 <li>Mothers’ Job Search after Childbirth and Earnings (with <a href="https://sites.google.com/site/bernhardecon/">Bernhard
 Schmidpeter</a>, <a href="https://www.dropbox.com/s/0ibbncyd9ldu23t/20220824_Bounds_MaternityReturn.pdf?dl=0">WP
 version</a>, <a href="http://lukaslaffers.github.io/files/mothers_presentation.pdf">slides</a>)</li>
 <li>Locking-in or Pushing-out: The Caseworker Dilemma (with <a href="http://ekonom.sav.sk/sk/pracovnici/miroslav-stefanik">Miroslav
-Štefánik</a>, <a href="http://lukaslaffers.github.io/files/DML_presentation-3.pdf">slides</a>,
-<a href="https://ekonom.sav.sk/uploads/journals/438_wp115-stefanik-zmena-na_web.pdf">IER
-WP</a>)</li>
+Štefánik</a>, <a href="https://ekonom.sav.sk/uploads/journals/438_wp115-stefanik-zmena-na_web.pdf">IER
+WP</a>, <a href="http://lukaslaffers.github.io/files/DML_presentation-3.pdf">slides</a>)</li>
 <li>Afraid of Automation? Choose your Training Carefully (with <a href="https://ekonom.sav.sk/sk/pracovnici/zuzana-kostalova">Zuzana
 Koštálová</a>, <a href="http://ekonom.sav.sk/sk/pracovnici/miroslav-stefanik">Miroslav
 Štefánik</a>, <a href="https://ekonom.sav.sk/uploads/journals/437_wp_116-kostalova-final_fin_na_web.pdf">IER
@@ -376,7 +380,7 @@ and <a href="https://sites.google.com/view/principefrancesco/">Francesco
 Principe</a>)</li>
 <li>Correcting for Nonignorable Nonresponse Bias in Ordinal
 Observational Survey Data (with <a href="https://jozefmichalmintal.com">Jozef Michal Mintal</a> and Ivan
-Sutoris)</li>
+Sutoris, <a href="http://lukaslaffers.github.io/files/presentation_LL_MIER.pdf">slides</a>)</li>
 <li>Treatment Effects for Discrete Misreported Outcomes (under
 Endogeneity) (with <a href="https://sites.google.com/view/daniel-gutknecht/home">Daniel
 Gutknecht</a> and <a href="https://sites.google.com/site/giovannimellace/">Giovanni
@@ -400,13 +404,19 @@ of Labour Market Research</em></strong>, 2024, 16 (58)</a>, 1—22)</li>
 <li>Double machine learning for sample selection models (with <a href="https://liser.elsevierpure.com/en/persons/michela-bia">Michela
 Bia</a> and <a href="http://www.unifr.ch/appecon/en/team/martin-huber/">Martin
 Huber</a>, <a href="https://www.tandfonline.com/doi/full/10.1080/07350015.2023.2271071"><strong><em>Journal
-of Business &amp; Economic Statistics</em></strong>, 2024, 42, (3),
+of Business &amp; Economic Statistics</em></strong>, 2024, 42 (3),
 958-969</a><em>,</em> previous WP <a href="https://arxiv.org/abs/2012.00745">arXiv:2012.00745</a>,
 presentation: <a href="https://www.youtube.com/watch?list=PL-MRd_-k_6x1dYwWftAAxg-f4B3jbmfbT&amp;v=wp6avQodTtk">UCL</a>
-by MH, implemented in R - <a href="https://cran.r-project.org/web/packages/causalweight/index.html">causalweight</a>
-package or in Python in <a href="https://docs.doubleml.org/stable/guide/models.html#sample-selection-models-ssm">DoubleML</a>
-by <a href="https://www.linkedin.com/in/mychaela98/">Michaela
-Kecskésová</a>)</li>
+by MH), implemented in
+<ul>
+<li>R - <a href="https://cran.r-project.org/web/packages/causalweight/index.html"><code>treatselDML</code>
+in causalweight</a> package,</li>
+<li>R - <a href="https://cran.r-project.org/web/packages/DoubleML/index.html"><code>DoubleMLSSM</code>
+in DoubleML</a> package by Petronela Jasenáková,</li>
+<li>Python - <a href="https://docs.doubleml.org/stable/guide/models.html#sample-selection-models-ssm"><code>DoubleMLSSM</code>
+in DoubleML</a> by <a href="https://www.linkedin.com/in/mychaela98/">Michaela
+Kecskésová</a>.</li>
+</ul></li>
 <li>Bounds on direct and indirect effects under treatment/mediator
 endogeneity and outcome attrition (with <a href="http://www.unifr.ch/appecon/en/team/martin-huber/">Martin
 Huber</a>, <a href="https://www.tandfonline.com/doi/full/10.1080/07474938.2022.2127077?src="><strong><em>Econometric
@@ -419,8 +429,11 @@ learning (<a href="https://academic.oup.com/ectj/article/25/3/628/6604379?guestA
 Journal,</em></strong> _2022, 25 (3),
 628—648</a><strong><em>,</em></strong> with <a href="https://sites.google.com/site/hugobodoryofficial/">Hugo Bodory</a>
 and <a href="http://www.unifr.ch/appecon/en/team/martin-huber/">Martin
-Huber</a>, implemented in R - <a href="https://cran.r-project.org/web/packages/causalweight/index.html">causalweight</a>
-package)</li>
+Huber</a>, implemented in
+<ul>
+<li>R - <a href="https://cran.r-project.org/web/packages/causalweight/index.html"><code>dyntreatDML</code>
+in causalweight</a> package.</li>
+</ul></li>
 <li>Causal mediation analysis with double machine learning (<a href="https://academic.oup.com/ectj/advance-article/doi/10.1093/ectj/utac003/6517682?guestAccessKey=bee35ef3-9be1-4944-adeb-8915458c01cf"><strong><em>Econometrics
 Journal</em></strong>, 2022, 25 (2), 277—300</a>, with <a href="http://www.farbmacher.de">Helmut Farbmacher</a>, <a href="http://www.unifr.ch/appecon/en/team/martin-huber/">Martin
 Huber</a>, <a href="https://www3.unifr.ch/appecon/en/chair/team/henrika-langen.html">Henrika
@@ -428,8 +441,11 @@ Langen</a> and <a href="https://sites.google.com/site/spindlermartin/">Martin
 Spindler</a>, <a href="https://academic.oup.com/ectj/pages/editors-choice"><em>May 2022
 Editor’s choice article</em></a><em>,</em> presentations: <a href="https://www.youtube.com/watch?list=PL-MRd_-k_6x1dYwWftAAxg-f4B3jbmfbT&amp;v=tuBXi3zCCHY">MonashU</a>,
 <a href="https://youtu.be/__P5DP0WQpo?list=PL-MRd_-k_6x1dYwWftAAxg-f4B3jbmfbT&amp;t=3701">ESWC
-2020</a> by MH, implemented in R - <a href="https://cran.r-project.org/web/packages/causalweight/index.html">causalweight</a>
-package)</li>
+2020</a> by MH), implemented in
+<ul>
+<li>R - <a href="https://cran.r-project.org/web/packages/causalweight/index.html"><code>medDML</code>
+in causalweight</a> package.</li>
+</ul></li>
 <li>The Impact of Repeated Mass Antigen Testing for COVID-19 on the
 Prevalence of the Disease (<a href="https://link.springer.com/article/10.1007/s00148-021-00856-z"><strong><em>Journal
 of Population Economics</em></strong>, 2021, 34, 1105—1040</a>, with <a href="https://people.ceu.edu/martin_kahanec">Martin Kahanec</a> and <a href="https://sites.google.com/site/bernhardecon/">Bernhard
