--- a/_pages/teach.html
+++ b/_pages/teach.html
@@ -381,23 +381,15 @@ regresia 2</a></li>
 <ul>
 <li>Probability and Statistics 1 (Spring 2022-2025 in Slovak, UMB)
 <ul>
-<li>prvý zápočet bude <strong>31.3.2025 o 17:30 v F225</strong></li>
+<li><strong>Skúšky (prihlasujte sa v AISe): riadny termín 29.5.2025 o
+<del>9:00</del> 10:30 v F236, opravný 5.6.2025 v F225</strong></li>
 <li><a href="https://lukaslaffers.github.io/files/sylabus_ps_1_svk_25.pdf">Sylabus</a></li>
 <li>Učebný text <a href="https://lukaslaffers.github.io/pas1/">web</a>,
-<a href="http://lukaslaffers.github.io/files/PAS1q_05032025.pdf">pdf</a></li>
-<li>Zaujímavé odkazy:
-<ul>
-<li><a href="https://seeing-theory.brown.edu/">Vizualizácie (Seeing
-Theory)</a></li>
-<li><a href="https://www.stat.berkeley.edu/~stark/Preprints/611.pdf">Aká
-je pravdepodobnosť zemetrasenia? (Stark and Freedman)</a></li>
-<li><a href="https://www.youtube.com/watch?v=HZGCoVF3YvM">Vizualizácia
-Bayesovej vety (3Blue1Brown)</a></li>
-<li><a href="https://www.youtube.com/watch?v=4Lb-6rxZxx0">Monty Hall
-problem (Numberphile)</a></li>
-<li><a href="https://www.youtube.com/watch?v=zeJD6dqJ5lo">Centrálna
-limitná veta (3Blue1Brown)</a></li>
-</ul></li>
+<a href="http://lukaslaffers.github.io/files/PAS1q_05032025.pdf">pdf
+(staršia verzia)</a></li>
+<li><strong>Budem Vám vďačný, ak mi dáte vedieť o prípadných chybách,
+nejasnostiach, preklepoch a nedorozumeniach v učebnom texte.
+Ďakujem!</strong></li>
 </ul></li>
 </ul>
 <hr />
