--- a/_pages/research.html
+++ b/_pages/research.html
@@ -365,8 +365,8 @@ implemented in
 in causalweight</a> package.</li>
 </ul></li>
 <li>Mothers’ Job Search after Childbirth and Earnings (with <a href="https://sites.google.com/site/bernhardecon/">Bernhard
-Schmidpeter</a>, <a href="https://www.dropbox.com/s/0ibbncyd9ldu23t/20220824_Bounds_MaternityReturn.pdf?dl=0">WP
-version</a>, <a href="http://lukaslaffers.github.io/files/mothers_presentation.pdf">slides</a>)</li>
+Schmidpeter</a>, <a href="http://lukaslaffers.github.io/files/Mothers_May2025.pdf">(May
+2025)</a>, <a href="http://lukaslaffers.github.io/files/mothers_presentation.pdf">slides</a>)</li>
 <li>Locking-in or Pushing-out: The Caseworker Dilemma (with <a href="http://ekonom.sav.sk/sk/pracovnici/miroslav-stefanik">Miroslav
 Štefánik</a>, <a href="https://ekonom.sav.sk/uploads/journals/438_wp115-stefanik-zmena-na_web.pdf">IER
 WP</a>, <a href="http://lukaslaffers.github.io/files/DML_presentation-3.pdf">slides</a>)</li>
