--- a/_pages/teach.html
+++ b/_pages/teach.html
@@ -382,7 +382,8 @@ regresia 2</a></li>
 <li>Probability and Statistics 1 (Spring 2022-2025 in Slovak, UMB)
 <ul>
 <li><strong>Skúšky (prihlasujte sa v AISe): riadny termín 29.5.2025 o
-<del>9:00</del> 10:30 v F236, opravný 5.6.2025 v F225</strong></li>
+<del>9:00</del> <del>10:30</del> 9:00 v F236, opravný 5.6.2025 v
+F225</strong></li>
 <li><a href="https://lukaslaffers.github.io/files/sylabus_ps_1_svk_25.pdf">Sylabus</a></li>
 <li>Učebný text <a href="https://lukaslaffers.github.io/pas1/">web</a>,
 <a href="http://lukaslaffers.github.io/files/PAS1q_05032025.pdf">pdf
