--- a/_pages/teach.html
+++ b/_pages/teach.html
@@ -379,18 +379,6 @@ regresia 2</a></li>
 <div id="courses" class="section level1">
 <h1>Courses</h1>
 <ul>
-<li>Probability and Statistics 1 (Spring 2022-2025 in Slovak, UMB)
-<ul>
-<li><strong>Opravný termín <del>5.6.2025</del> 10.6.2025 o 9:00 v
-F235</strong></li>
-<li><a href="https://lukaslaffers.github.io/files/sylabus_ps_1_svk_25.pdf">Sylabus</a></li>
-<li>Učebný text <a href="https://lukaslaffers.github.io/pas1/">web</a>,
-<a href="http://lukaslaffers.github.io/files/PAS1q_05032025.pdf">pdf
-(staršia verzia)</a></li>
-</ul></li>
-</ul>
-<hr />
-<ul>
 <li>Econometrics (Fall 2021-2024, PhD course, MUNI)</li>
 <li>Optimisation and Microeconomic Theory (Fall 2014, 2018-2024, Master,
 NHH)</li>
@@ -401,6 +389,7 @@ UMB)</li>
 UMB)</li>
 <li>Stochastic Processes (Fall 2015-2018, 2020-2024, in Slovak,
 UMB)</li>
+<li>Probability and Statistics 1 (Spring 2022-2025 in Slovak, UMB)</li>
 <li>Probability and Statistics 2 (Fall 2021-2023 in Slovak, UMB)</li>
 <li>Computation and Simulation in R 3 (Spring 2018-2021, 2023, in
 Slovak, UMB)</li>
