--- a/_pages/research.html
+++ b/_pages/research.html
@@ -532,13 +532,14 @@ UK)</li>
 <h1>Refereeing</h1>
 <ul>
 <li>Journal of Econometrics, Journal of the Royal Statistical Society:
-Series C (Applied Statistics), Oxford Bulletin of Economics and
-Statistics, Biometrics, Journal of Human Resources, Empirical Economics,
-Advances in Statistical Analysis, Journal of Econometric Methods,
-European Journal of Operations Research, Journal of Environmental
-Economics and Management, Research in Statistics, Journal of Statistical
-Computation and Simulation, Journal of Data Science, Applied Economics,
-Ekonomický Časopis</li>
+Series C (Applied Statistics), Journal of Applied Econometrics, Oxford
+Bulletin of Economics and Statistics, Biometrics, Journal of Human
+Resources, Economics Letters, Empirical Economics, Advances in
+Statistical Analysis, Journal of Econometric Methods, European Journal
+of Operations Research, Journal of Environmental Economics and
+Management, Research in Statistics, Journal of Statistical Computation
+and Simulation, Journal of Data Science, Applied Economics, Ekonomický
+Časopis</li>
 <li>Social Policy Insitute, Institute for Healthcare Analyses, VEGA
 grant scheme, Riksbankens jubileumsfond</li>
 </ul>
